fix(projects): fixed image overflow

--- a/css/projects.css
+++ b/css/projects.css
@@ -265,6 +265,7 @@ button:hover { cursor: pointer; }
 #epubbly img {
   margin-bottom: 25px;
   box-shadow: 1px 1px 10px grey;
+  max-width: 60%;
 }
 
 #epubbly #topBanner {
